Bug 461663 - 16 bits colour channel values should not have lower bits zeroed. r=gavin